Removing carousel item. Fixed spacing in CSS

--- a/public/resources/css/main.css
+++ b/public/resources/css/main.css
@@ -13,12 +13,73 @@
 /* Extra large devices (large desktops, 1200px and up)
  * @media (min-width: 1200px) { ... }
  */
-.submit-button-center{
+
+.margin-bottom-50 {
+    margin-bottom: 50px;
+}
+.margin-bottom-40 {
+    margin-bottom: 40px;
+}
+.margin-bottom-30 {
+    margin-bottom: 30px;
+}
+.margin-bottom-20 {
+    margin-bottom: 20px;
+}
+.margin-bottom-10 {
+    margin-bottom: 10px;
+}
+.margin-top-50 {
+    margin-top: 50px;
+}
+.margin-top-40 {
+    margin-top: 40px;
+}
+.margin-top-30 {
+    margin-top: 30px;
+}
+.margin-top-20 {
+    margin-top: 20px;
+}
+.margin-top-10 {
+    margin-top: 10px;
+}
+.margin-right-50 {
+    margin-right: 50px;
+}
+.margin-right-40 {
+    margin-right: 40px;
+}
+.margin-right-30 {
+    margin-right: 30px;
+}
+.margin-right-20 {
+    margin-right: 20px;
+}
+.margin-right-10 {
+    margin-right: 10px;
+}
+.margin-left-50 {
+    margin-right: 50px;
+}
+.margin-left-40 { 
+    margin-right: 40px;
+}
+.margin-left-30 {
+    margin-right: 30px;
+}
+.margin-left-20 {
+    margin-right: 20px;
+}
+.margin-left-10 {
+    margin-right: 10px;
+}
+.submit-button-center {
     display: block;
     margin: 3em auto;
     padding: 10px 60px;
 }
-.apply{
+.apply {
     margin: 0 auto;
     padding: 20px 140px;
 }
@@ -29,10 +90,6 @@ body {
     max-width: 330px;
     margin: 0 auto;
 }
-/*
- * Keep links aligned
- * when in Mobile
- */
 nav .left {
     float: left;
 }
@@ -45,7 +102,6 @@ nav .right {
 .thick-hr {
     border: none;
     height: 1px;
-    /* Set the hr color */
     color: black; /* old IE */
     background-color: #333; /* Modern Browsers */
 }
