--- a/public/resources/css/sticky-footer.css
+++ b/public/resources/css/sticky-footer.css
@@ -1,18 +1,31 @@
+/* Small devices (landscape phones, 576px and up)
+ * @media (min-width: 576px) { ... }
+ */
+
+/* Medium devices (tablets, 768px and up)
+ * @media (min-width: 768px) { ... }
+ */
+ 
+/* Large devices (desktops, 992px and up)
+ * @media (min-width: 992px) { ... }
+ */
+
+/* Extra large devices (large desktops, 1200px and up)
+ * @media (min-width: 1200px) { ... }
+ */
+
 html {
     position: relative;
     min-height: 100%;
-  }
-  body {
-    /* Margin bottom by footer height */
-    margin-bottom: 60px;
-  }
-  .footer {
-    position: absolute;
-    bottom: 0;    
-    width: 100%;
-    /* Set the fixed height of the footer here */
-    height: 60px;
-    background-color: #f5f5f5;
-    line-height: 60px;
 }
-
+body {
+    /* margin-bottom: 60px; */
+}
+.footer {
+  position: absolute;
+  bottom: 0;    
+  width: 100%;
+  height: 60px;
+  background-color: #f5f5f5;
+  line-height: 60px;
+}
